--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
             [rows]="10" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]" [loading]="loading"
             [paginator]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
             [filterDelay]="0" [globalFilterFields]="['name','country.name','representative.name','status']">
-            <ng-template pTemplate="caption">
+            <!-- <ng-template pTemplate="caption">
                 <div class="table-header">
                     List of Customers
                     <span class="p-input-icon-left">
@@ -10,7 +10,7 @@
                         <input pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Global Search" />
                     </span>
                 </div>
-            </ng-template>
+            </ng-template> -->
             <ng-template pTemplate="header">
                 <tr>
                     <th style="width: 3rem"></th>
